Add ratings, fix read more and add new endpoint
